# open-government-portal-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go/: AGENTS.md  CLAUDE.md  LICENSE  README.md  REFERENCE.md  go.mod  open-government-portal.go
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
lua/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.lua  features.lua  open-government-portal.rockspec  open-government-portal_sdk.lua  open-government-portal_types.lua
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  features.py  opengovernmentportal_sdk.py  opengovernmentportal_types.py  pyproject.toml
py/core/: context.py  control.py  helpers.py  response.py  result.py
py/entity/: dataset_entity.py
py/feature/: base_feature.py  clienttrack_feature.py  debug_feature.py  idempotency_feature.py  log_feature.py  metrics_feature.py  netsim_feature.py  test_feature.py  timeout_feature.py
py/test/: runner.py  test_dataset_direct.py  test_dataset_entity.py  test_exists.py  test_feature.py  test_netsim.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py
py/utility/: done.py  feature_add.py  feature_hook.py  feature_init.py  make_context.py  make_error.py  make_fetch_def.py  make_options.py  make_point.py  make_request.py  make_response.py  make_result.py  prepare_auth.py  prepare_body.py  prepare_params.py  prepare_path.py  register.py  result_basic.py  result_headers.py
(+422 files in other folders)
